Fix ConfirmModal z-index to show above other modals

--- a/src/common/components/ConfirmModal.module.css
+++ b/src/common/components/ConfirmModal.module.css
@@ -10,7 +10,7 @@
   align-items: flex-start;
   justify-content: center;
   padding-top: 10vh;
-  z-index: 9999;
+  z-index: 10001;
   animation: fadeIn 0.2s ease-out;
 }
 
